--- a/exemplo_9.html
+++ b/exemplo_9.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="exemplo_9.css" />
   </head>
   
   <body>
@@ -37,7 +37,7 @@
             <a href="#" class="lista-menu__link">Design & UX</a>
           </li>
         </ul>
-        <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+        <img src="img_9/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
       </div>
       <div class="container">
         <a href="#"><img src="img_9/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
