--- a/exemplo_10.html
+++ b/exemplo_10.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu responsivo 3</title>
 </head>
 <body>
+    <nav>
+        <div class="menu">
+            <a href="#"><label1>Home</label1></a>
+
+            <a href="#"><label1>Sobre</label1></a>
+
+            <a href="#"><label1>Quem Somos</label1></a>
+
+            <a href="#"><label1>Contato</label1></a>
+        </div>
+    </nav>
     <main></main>
-    
+
 </body>
 </html>
