--- a/exemplo_10.html
+++ b/exemplo_10.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu responsivo 3</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="exemplo_10.css">
 </head>
 <body>
     <nav>
