--- a/exemplo_11.html
+++ b/exemplo_11.html
@@ -6,6 +6,6 @@
     <title>Imagem de fundo</title>
 </head>
 <body>
-    <img class="imagem-fundo">
+    <img src="img1/tecnologia" class="imagem-fundo">
 </body>
 </html>
