--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <br><br><br> <br>
      <nav>    
          <ul>
-             <li class="active"><a href="exemplo_11.html">Exemplo_11</a></li>
+             <li class="active"><a href="exemplo_11.html">Imagem de fundo</a></li>
              <li><a href="exemplo_12.html">Exemplo_12</a></li>
              <li><a href="exemplo_13.html">Exemplo_13</a></li>
              <li><a href="exemplo_14.html">Exemplo_14</a></li>
