--- a/exemplo_11.html
+++ b/exemplo_11.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagem de fundo</title>
+    <link rel="stylesheet" href="exemplo_11.css">
 </head>
 <body>
-    <img  class="imagem-fundo">
+    <img src="img_11/tecnologia.png" class="imagem-fundo">
 </body>
 </html>
