--- a/exemplo_11.html
+++ b/exemplo_11.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="exemplo_11.css">
 </head>
 <body>
-    <img src="img_11/tecnologia.png" class="imagem-fundo">
+   <!-- <img src="img_11/tecnologia.png" class="imagem-fundo">-->
     <h1>Imagem de fundo</h1>
 </body>
 </html>
