--- a/exemplo_11.html
+++ b/exemplo_11.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Imagem de fundo</h1>
- <!--<img src="img_11/tecnologia.png" class="imagem-fundo">-->
+ <img src="img_11/tecnologia.png" class="imagem-fundo">
    
 </body>
 </html>
